# apero-drs

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  TIMINGS.txt  UPDATE_HEADER.txt  UPDATE_NOTES.txt  VERSION.txt  apero_overall_flow.graphml  changelog.md  cook@localhost.mysql.backup  log.txt  minimum_requirements.txt  requirements.txt  requirements_current.txt  requirements_developer.txt  requirements_exact.txt  requirements_mysql.txt  requirements_test.txt  setup.cfg  setup.py  version.txt
.github/workflows/: diagram.yml
INTROOT/SpirouDRS/: __init__.py
INTROOT/config/: config.py  constants_SPIROU.py  constants_SPIROU_H2RG.py  constants_SPIROU_H4RG.py
INTROOT/documentation/: Dev_guide_spirou_drs.tex  User_guide_spirou_drs.tex
INTROOT/misc/: CHANGELOG_backup.md  Get_ChangeLog.py  berv_error_test.py  berv_estimate_comparison.py  cal_CCF_E2DS_FP_MH_spirou.py  cal_CCF_E2DS_FP_spirou_new.py  cal_CCF_E2DS_OLD_spirou.py  cal_CCF_wrap_MH.py  cal_DRIFT_RAW_spirou.py  cal_HC_E2DS_spirou.py  cal_SHAPE_spirou.py  cal_SHAPE_spirou_old.py  cal_WAVE_E2DS_EA_spirou_old.py  cal_WAVE_E2DS_spirou.py  cal_WAVE_NEW_E2DS_spirou.py  cal_WAVE_NEW_E2DS_spirou_2.py  cal_extract_EA_test.py  cal_extract_RAW_spirouAB.py  check_calibdb_2.py  check_for_corrupt_files.py  check_objname.py  clean_calibdb.py  comp_s1d_to_s2d.py  compare_outputs.py  dark_test.py  edit_header.py  error_test.py  explore_headers.py  extract_all_files.py  extract_test_5a_5b.py  find_lines_test.py  find_lines_test_results.py  fit_interp_test.py  fit_tellu.py  fitgaus1.py  gaussfit.py  get_tell_files_EA.py  gfit_tests.py  git_tag.py  hcpeaks.py  (+35 more)
INTROOT2/: Neil_TODO.md  __init__.py  how_to_terrapipe.md
INTROOT2/documentation/: README.md
INTROOT2/drsmodule/: __init__.py
INTROOT2/misc/: dispatch_object.py  (+2 more)
SpirouDRS/: __init__.py
apero/: MANIFEST.in  README.md  requirements.txt  setup.py
apero-core/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
apero-data/: README.md
apero-drs/: MANIFEST.in  README.md  requirements.txt  setup.py
config/: README.md  config.py  config.txt  constants_SPIROU.py  constants_SPIROU.txt  hadmrICDP_SPIROU.txt  keywords.py
data_example/: README.md
documentation/: Dev_guide_spirou_drs.tex  MemoirChapStyles.tex  README.md  User_guide_spirou_drs.tex  conf.py  index.rst
misc/: README.md  fast_convolve_correct_local_background.py  func.py  lin_mini_upgrade.py  mk_template_s1d.py
sandbox/: README.md
setup/: README.md  copyraw.py  install.py  install_script.sh  newprofile.py  setup_lang.py  utils.py
tools/: README.md
(+4214 files in other folders)
