[metadata]
name = apero
description = A PipelinE to Reduce Observations - The DRS for SPIRou (CFHT) 
long_description = file: README.md
long_description_content_type = text/markdown
author = Neil Cook
author_email = neil.james.cook@gmail.com
url = https://www.astro.umontreal.ca/~cook/apero-drs/
project_urls =
    Source Code = https://github.com/njcuk9999/apero-drs
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires = file: requirements.txt
python_requires = >=3.7,<3.10

[options.extras_require]
mysql = file: requirements_mysql.txt
dev = file: requirements_dev.txt

[options.entry_points]
console_scripts =
    lbl_find = lbl.recipes.lbl_find:main
    lbl_reset = lbl.recipes.lbl_reset:main
