[metadata]
name = apero
description = A PipelinE to Reduce Observations - The DRS for SPIRou (CFHT) 
long_description = file: README.md
long_description_content_type = text/markdown
author = Neil Cook
author_email = neil.james.cook@gmail.com
version = attr: apero.base.base.__version__
url = https://www.astro.umontreal.ca/~cook/apero-drs/
project_urls =
    Source Code = https://github.com/njcuk9999/apero-drs
license = MIT License

[options]
zip_safe = False
packages = find:
include_package_data = True
# TODO: Double check this work from git directly, otherwise symlink
install_requires = file: apero/setup/requirements.txt
python_requires = >=3.7,<3.10

[options.extras_require]
mysql = file: apero/setup/requirements_mysql.txt
dev = file: apero/setup/requirements_dev.txt

[options.entry_points]
console_scripts =
    lbl_find = lbl.recipes.lbl_find:main
    lbl_reset = lbl.recipes.lbl_reset:main
